my new cv added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <p class="text">
                 Hello, I'm Arzu Asgarov, full stack developer and mobile app developer.I interest Python programming language and I want to study Data science in abroad.
               </p>
-              <a href="./pdf/Arzu_Asgarov_Resume_03-07-2021-13-23-46.pdf" target="_blank  " class="btn">Open CV</a>
+              <a href="./pdf/mycv.pdf" target="_blank  " class="btn">Open CV</a>
             </div>
 
             <div class="column-2 image">
