--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="column-1">
               <h1 class="header-title">Arzu Asgarov</h1>
               <p class="text">
-                Hello, I'm Arzu Asgarov, full stack developer and mobile app developer.I interest Python programming language and I want to study Data science in abroad.
+                Hello, I'm Arzu Asgarov, full stack developer (MERN).I interest Python programming language and I want to study Data science in abroad.
               </p>
               <a href="./pdf/mycv.pdf" target="_blank  " class="btn">Open CV</a>
             </div>
