--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <img src="./img/design-icon.png" class="icon" alt="" />
                   <h3 class="title-sm">Front end Developer</h3>
                   <p class="text">
-                   I  am a front end developer
+                   
                   </p>
                   <a href="#" class="btn small">Read more</a>
                 </div>
@@ -125,14 +125,14 @@
                   <img src="./img/code-icon.png" class="icon" alt="" />
                   <h3 class="title-sm">Back end Developer</h3>
                   <p class="text">
-                    Coming soon
+                    
                   </p>
                   <a href="#" class="btn small">Read more</a>
                 </div>
               </div>
             </div>
 
-            <div class="card-wrap">
+            <!-- <div class="card-wrap">
               <img
                 src="./img/shapes/points3.png"
                 class="points points2 points-sq"
@@ -148,7 +148,7 @@
                   <a href="#" class="btn small">Read more</a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
@@ -186,31 +186,37 @@
           <div class="section-body">
             <div class="filter">
               <button class="filter-btn active" data-filter="*">All</button>
-              <button class="filter-btn" data-filter=".ui">UI/UX</button>
-              <button class="filter-btn" data-filter=".webdev">Web Dev</button>
-              <button class="filter-btn" data-filter=".appdev">
+              <button class="filter-btn" data-filter=".ui">Front-end</button>
+              <button class="filter-btn" data-filter=".webdev">Back-end</button>
+              <!-- <button class="filter-btn" data-filter=".appdev">
                 Mobile App
               </button>
               <button class="filter-btn" data-filter=".logo-design">
                 Logo Design
-              </button>
+              </button> -->
             </div>
 
             <div class="grid">
-              <div class="grid-item logo-design disabled">
+
+              <!-- &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&& -->
+              <a href="./todoapp-master/index.html" target="_blank  ">
+              <div class="grid-item ui ">
                 <div class="gallery-image">
                   <img src="./img/portfolio/port1.jpg" alt="" />
                   <div class="img-overlay">
                     <div class="plus"></div>
                     <div class="img-description">
-                      <h3>Logo Design</h3>
+                      <h3>Todo Design</h3>
                       <h5>View Demo</h5>
                     </div>
                   </div>
                 </div>
               </div>
+              </a>
+
+              <!-- ************************************************************************* -->
               <a href="https://asgerofharzu.github.io/bookworm.com/" target="_blank">
-              <div class="grid-item webdev">
+              <div class="grid-item ui webdev">
                 <div class="gallery-image">
                   <img src="./img/portfolio/port2.png" alt="" />
                   <div class="img-overlay">
@@ -223,31 +229,37 @@
                 </div>
               </div>
             </a>
-              <div class="grid-item ui webdev disabled">
+
+            <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
+            <a href="./Calculator/index.html" target="_blank">
+              <div class="grid-item ui">
                 <div class="gallery-image">
-                  <img src="./img/portfolio/port3.png" alt="" />
+                  <img src="./img/portfolio/port3.jpg" alt="" />
                   <div class="img-overlay">
                     <div class="plus"></div>
                     <div class="img-description">
-                      <h3>Web Design</h3>
+                      <h3>Calculyator</h3>
                       <h5>View Demo</h5>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item ui disabled">
+              </a>
+
+             <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
+              <div class="grid-item ui ">
                 <div class="gallery-image">
                   <img src="./img/portfolio/port4.png" alt="" />
                   <div class="img-overlay">
                     <div class="plus"></div>
                     <div class="img-description">
-                      <h3>UI / UX Design</h3>
+                      <h3>Tic-Tac-Toe game</h3>
                       <h5>View Demo</h5>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item logo-design disabled">
+              <div class="grid-item ui webdev disabled">
                 <div class="gallery-image">
                   <img src="./img/portfolio/port5.jpg" alt="" />
                   <div class="img-overlay">
@@ -259,7 +271,7 @@
                   </div>
                 </div>
               </div>
-              <div class="grid-item appdev disabled">
+              <div class="grid-item  webdev disabled">
                 <div class="gallery-image">
                   <img src="./img/portfolio/port6.jpg" alt="" />
                   <div class="img-overlay">
@@ -271,7 +283,7 @@
                   </div>
                 </div>
               </div>
-              <div class="grid-item logo-design disabled">
+              <div class="grid-item  webdev disabled">
                 <div class="gallery-image">
                   <img src="./img/portfolio/port7.jpg" alt="" />
                   <div class="img-overlay">
@@ -283,7 +295,7 @@
                   </div>
                 </div>
               </div>
-              <div class="grid-item appdev ui disabled">
+              <div class="grid-item  webdev disabled">
                 <div class="gallery-image">
                   <img src="./img/portfolio/port8.png" alt="" />
                   <div class="img-overlay">
@@ -295,7 +307,7 @@
                   </div>
                 </div>
               </div>
-              <div class="grid-item ui webdev disabled">
+              <div class="grid-item  webdev disabled">
                 <div class="gallery-image">
                   <img src="./img/portfolio/port9.png" alt="" />
                   <div class="img-overlay">
