I have added my new works

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
               </a>
 
              <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
+             <a href="./tic-tac-toe/index.html" target="_blank">
               <div class="grid-item ui ">
                 <div class="gallery-image">
                   <img src="./img/portfolio/port4.png" alt="" />
@@ -259,6 +260,7 @@
                   </div>
                 </div>
               </div>
+              </a>
               <div class="grid-item ui webdev disabled">
                 <div class="gallery-image">
                   <img src="./img/portfolio/port5.jpg" alt="" />
