--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
             <div class="column-2 image">
               <img src="./img/shapes/points4.png" class="points" alt="" />
-              <img src="./img/person.png" class="z-index me" alt="" />
+              <img src="./img/person.pjg" class="z-index me" alt="" />
             </div>
           </div>
         </div>
